Tela de perfil de pro cs

--- a/public/css/feed.css
+++ b/public/css/feed.css
@@ -255,7 +255,12 @@ textarea::-moz-input-placeholder {
 }
 
 .fa-heart{
+  cursor: pointer;
   transition: all 0.2s;
+}
+
+.fa-comment{
+  cursor: pointer;
 }
 
 .form-control{
